@@ -39,9 +39,9 @@
         <ReturnType>System.Int32</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'int'</returns>
-        <remarks>To be added</remarks>
+        <summary>The height of the screen area that was updated.</summary>
+        <returns>A <see cref="T:System.Int32"/></returns>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="Width">
@@ -51,9 +51,9 @@
         <ReturnType>System.Int32</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'int'</returns>
-        <remarks>To be added</remarks>
+        <summary>The width of the screen area that was updated.</summary>
+        <returns>A <see cref="T:System.Int32"/></returns>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="Y">
@@ -63,9 +63,9 @@
         <ReturnType>System.Int32</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'int'</returns>
-        <remarks>To be added</remarks>
+        <summary>The Y coordinate of the upper left point in the updated area.</summary>
+        <returns>A <see cref="T:System.Int32"/></returns>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="X">
@@ -75,9 +75,9 @@
         <ReturnType>System.Int32</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'int'</returns>
-        <remarks>To be added</remarks>
+        <summary>The X coordinate of the upper left point in the updated area.</summary>
+        <returns>A <see cref="T:System.Int32"/></returns>
+        <remarks/>
       </Docs>
     </Member>
   </Members>
