@@ -1,5 +1,10 @@
 2004-10-11 Shane Landrum <epicene@pobox.com>
 
+	* en/Gdk/AreaUpdatedArgs.xml
+	* en/Gdk/SizePreparedArgs.xml: Delegate class docs.
+	
+2004-10-11 Shane Landrum <epicene@pobox.com>
+
 	* en/Gdk/Pixbuf.xml
 	* en/Gdk/PixbufAlphaMode.xml
 	* en/Gdk/PixbufAniAnim.xml
